--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "elm-ls-vscode",
-  "displayName": "Elm",
-  "description": "Improving your Elm experience since 2019",
-  "publisher": "elmTooling",
-  "icon": "images/elm.png",
+  "name": "canopy-ls-vscode",
+  "displayName": "Canopy",
+  "description": "Improving your Canopy experience since 2024",
+  "publisher": "canopyLang",
+  "icon": "images/canopy.png",
   "author": "Kolja Lampe",
   "license": "MIT",
-  "version": "2.8.0",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/elm-tooling/elm-language-client-vscode"
+    "url": "https://github.com/CanopyLang/canopy-vscode"
   },
   "categories": [
     "Linters",
@@ -17,21 +17,24 @@
     "Programming Languages"
   ],
   "keywords": [
+    "canopy",
     "elm"
   ],
   "sponsor": {
-    "url": "https://opencollective.com/elm-tooling"
+    "url": "https://github.com/sponsors/CanopyLang"
   },
   "engines": {
     "vscode": "^1.63.0"
   },
   "activationEvents": [
+    "onLanguage:canopy",
+    "workspaceContains:**/canopy.json",
     "workspaceContains:**/elm.json"
   ],
   "main": "./out/nodeClient",
   "browser": "./out/browserClient",
   "bin": {
-    "elm-ls": "out/nodeServer.js"
+    "canopy-ls": "out/nodeServer.js"
   },
   "extensionDependencies": [
     "hbenl.vscode-test-explorer"
@@ -45,18 +48,29 @@
   "contributes": {
     "languages": [
       {
-        "id": "elm",
+        "id": "canopy",
         "aliases": [
+          "Canopy",
+          "canopy",
           "Elm",
           "elm"
         ],
         "extensions": [
+          ".can",
           ".elm"
         ],
-        "configuration": "./language-configuration.json"
+        "configuration": "./language-configuration.json",
+        "icon": {
+          "light": "./images/canopy.png",
+          "dark": "./images/canopy.png"
+        }
       }
     ],
     "jsonValidation": [
+      {
+        "fileMatch": "canopy.json",
+        "url": "./schemas/canopy.schema.json"
+      },
       {
         "fileMatch": "elm.json",
         "url": "./schemas/elm.schema.json"
@@ -74,44 +88,45 @@
           "text.html.markdown"
         ],
         "embeddedLanguages": {
-          "meta.embedded.block.elm": "elm",
+          "meta.embedded.block.elm": "canopy",
+          "meta.embedded.block.canopy": "canopy",
           "meta.embedded.block.glsl": "glsl"
         }
       },
       {
-        "language": "elm",
-        "scopeName": "source.elm",
-        "path": "./syntaxes/elm-syntax.json"
+        "language": "canopy",
+        "scopeName": "source.canopy",
+        "path": "./syntaxes/canopy-syntax.json"
       }
     ],
     "commands": [
       {
-        "command": "elm.install",
+        "command": "canopy.install",
         "title": "Install Package",
-        "category": "Elm"
+        "category": "Canopy"
       },
       {
-        "command": "elm.browsePackage",
+        "command": "canopy.browsePackage",
         "title": "Browse Package",
-        "category": "Elm"
+        "category": "Canopy"
       },
       {
-        "command": "elm.commands.restart",
-        "title": "Restart Elm Language Server",
-        "category": "Elm"
+        "command": "canopy.commands.restart",
+        "title": "Restart Canopy Language Server",
+        "category": "Canopy"
       }
     ],
     "taskDefinitions": [
       {
-        "type": "elm-test",
+        "type": "canopy-test",
         "properties": {}
       }
     ],
     "configuration": {
       "type": "object",
-      "title": "Elm",
+      "title": "Canopy",
       "properties": {
-        "elmLS.trace.server": {
+        "canopyLS.trace.server": {
           "scope": "window",
           "type": "string",
           "enum": [
@@ -122,19 +137,19 @@
           "default": "off",
           "description": "Traces the communication between VS Code and the language server."
         },
-        "elmLS.elmPath": {
+        "canopyLS.canopyPath": {
           "scope": "window",
           "type": "string",
           "default": "",
-          "description": "The path to your elm executable. Should be empty by default, in that case it will assume the name and try to first get it from a local npm installation or a global one. If you set it manually it will not try to load from the npm folder."
+          "description": "The path to your canopy executable. Should be empty by default, in that case it will assume the name and try to first get it from a local npm installation or a global one. If you set it manually it will not try to load from the npm folder."
         },
-        "elmLS.elmReviewPath": {
+        "canopyLS.elmReviewPath": {
           "scope": "window",
           "type": "string",
           "default": "",
           "description": "The path to your elm-review executable. Should be empty by default, in that case it will assume the name and try to first get it from a local npm installation or a global one. If you set it manually it will not try to load from the npm folder."
         },
-        "elmLS.elmReviewDiagnostics": {
+        "canopyLS.elmReviewDiagnostics": {
           "scope": "window",
           "type": "string",
           "enum": [
@@ -145,38 +160,38 @@
           "default": "off",
           "description": "Set severity or disable linting diagnostics for elm-review."
         },
-        "elmLS.elmFormatPath": {
+        "canopyLS.elmFormatPath": {
           "scope": "window",
           "type": "string",
           "default": "",
           "description": "The path to your elm-format executable. Should be empty by default, in that case it will assume the name and try to first get it from a local npm installation or a global one. If you set it manually it will not try to load from the npm folder."
         },
-        "elmLS.elmTestPath": {
+        "canopyLS.elmTestPath": {
           "scope": "window",
           "type": "string",
           "default": "",
           "description": "The path to your elm-test executable. Should be empty by default, in that case it will assume the name and try to first get it from a local npm installation or a global one. If you set it manually it will not try to load from the npm folder."
         },
-        "elmLS.disableElmLSDiagnostics": {
+        "canopyLS.disableCanopyLSDiagnostics": {
           "scope": "window",
           "type": "boolean",
           "default": false,
           "description": "Disable linting diagnostics from the language server."
         },
-        "elmLS.skipInstallPackageConfirmation": {
+        "canopyLS.skipInstallPackageConfirmation": {
           "scope": "window",
           "type": "boolean",
           "default": false,
           "description": "Skips confirmation for the Install Package code action."
         },
-        "elmLS.onlyUpdateDiagnosticsOnSave": {
+        "canopyLS.onlyUpdateDiagnosticsOnSave": {
           "scope": "window",
           "type": "boolean",
           "default": false,
           "description": "Only update compiler diagnostics on save, not on document change."
         },
-        "elmLS.elmTestRunner.showElmTestOutput": {
-          "description": "Show output of elm-test as terminal task",
+        "canopyLS.canopyTestRunner.showCanopyTestOutput": {
+          "description": "Show output of canopy-test as terminal task",
           "type": "boolean",
           "scope": "resource"
         }
@@ -188,10 +203,9 @@
     "version-minor": "npm --no-git-tag-version version minor",
     "version-major": "npm --no-git-tag-version version major",
     "version": "npm i && npm run compile",
-    "compile": "npm run copy-wasm && tsc -b tsconfig.json && node ./scripts/build.js",
-    "watch": "npm run copy-wasm && node ./scripts/build.js --watch",
-    "copy-wasm": "copyfiles ./server/tree-sitter-elm.wasm out -f",
-    "postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+    "compile": "tsc -b tsconfig.json && node ./scripts/build.js",
+    "watch": "node ./scripts/build.js --watch",
+    "postinstall": "cd client && npm install && cd ..",
     "test": "sh ./scripts/e2e.sh"
   },
   "dependencies": {
@@ -200,6 +214,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.5",
+    "@vscode/vsce": "^3.6.1",
     "copyfiles": "^2.4.1",
     "esbuild": "^0.24.0",
     "path-browserify": "^1.0.1",
