Update build configuration to remove bundled server
- Removed server TypeScript configuration references
- Updated build script to only build client components
- Extension now uses external canopy-language-server executable

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "files": [],
   "references": [
     { "path": "./client/tsconfig.node.json" },
-    { "path": "./client/tsconfig.browser.json" },
-    { "path": "./server/tsconfig.node.json" },
-    { "path": "./server/tsconfig.browser.json" }
+    { "path": "./client/tsconfig.browser.json" }
   ]
 }
