Fix VSCode extension icon size
- Created 128x128 version of Canopy icon for proper VSCode marketplace display
- Updated package.json to use correctly sized icon
- VSCode extensions require exactly 128x128 pixel icons

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Canopy",
   "description": "Improving your Canopy experience since 2024",
   "publisher": "canopyLang",
-  "icon": "images/canopy.png",
+  "icon": "images/canopy-128.png",
   "author": "Kolja Lampe",
   "license": "MIT",
   "version": "0.0.1",
